# spotify_data_explore

./: README.md  convert_json.py  data_ingest_prep.py  parse_json_attempt2.py  pyproject.toml
libraries/: duckdb_utils.py  general_utilities.py
spotify_data_explore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
